# Agilebot-mcp-server

./: .gitignore  LICENSE  README.md  mcp_servers_config.json  pyproject.toml  requirements.txt
.trae/skills/agilebot-robot-control/: SKILL.md
Python_v1.7.1.3/: requirements.txt
Python_v1.7.1.3/example/: alarm.py  coordinate_system.py  hardware_state.py  jogging.py  modbus.py  offline_trajectory.py  program_pose.py  signals.py
Python_v1.7.1.3/example/arm/: access_operate.py  connect_disconnect.py  get_arm_model_info.py  get_ctrl_status.py  get_robot_status.py  get_servo_status.py  get_version.py  soft_mode.py  switch_led_light.py
Python_v1.7.1.3/example/execution/: bas_script_execution.py  program_execution.py
Python_v1.7.1.3/example/extension/: get_robot_ip.py
Python_v1.7.1.3/example/file_manager/: file_manager.py  test.csv  test_prog.json  test_prog.xml  test_torque.trajectory
Python_v1.7.1.3/example/motion/: DH_param.py  UDP_feedback_position_control.py  add_payload.py  convert_pose.py  delete_payload.py  enable_drag.py  get_all_payload.py  get_current_payload.py  get_current_pose.py  get_drag_set.py  get_param.py  get_payload_by_id.py  get_user_soft_limit.py  move_circle.py  move_joint.py  move_line.py  payload_identify.py  set_current_payload.py  set_drag_set.py  set_param.py
Python_v1.7.1.3/example/registers/: MH_MI.py  MR.py  PR.py  R.py  SR.py
src/agilebot_mcp/: __init__.py  coordinate_system.py  drag_control.py  mcp_tools.py  modbus.py  payload.py  registers.py  robot_core.py  server.py
