[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agilebot-mcp"
version = "0.1.0"
description = "Agilebot Robot MCP Server"
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]==1.6.0",
  "numpy==1.26.4",
  "scipy==1.14.1",
  "tensorflow==2.17.0",
  "paramiko==3.4.0",
]

[project.scripts]
agilebot-mcp = "agilebot_mcp.server:main"

[tool.setuptools]
package-dir = { agilebot_mcp = "src/agilebot_mcp" }
